feat: Implementando lógica restante. V1.2