@@ -1,7 +1,6 @@
 package com.cafeteriasoma.app.service.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
@@ -12,33 +11,38 @@ import com.cafeteriasoma.app.dto.usuario.UsuarioResponse;
 import com.cafeteriasoma.app.dto.usuario.UsuarioUpdateRequest;
 import com.cafeteriasoma.app.entity.Rol;
 import com.cafeteriasoma.app.entity.Usuario;
+import com.cafeteriasoma.app.exception.ConflictException;
+import com.cafeteriasoma.app.exception.ResourceNotFoundException;
+import com.cafeteriasoma.app.exception.UnauthorizedException;
 import com.cafeteriasoma.app.repository.RolRepository;
 import com.cafeteriasoma.app.repository.UsuarioRepository;
 import com.cafeteriasoma.app.service.interfaces.UsuarioService;
 
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class UsuarioServiceImpl implements UsuarioService {
 
     private final UsuarioRepository usuarioRepository;
     private final RolRepository rolRepository;
     private final PasswordEncoder passwordEncoder;
 
-    // ADMIN: crear nuevo usuario
+    // ====================== ADMIN ======================
     @Override
     public UsuarioResponse crearUsuario(UsuarioRequest request) {
-        Rol rol = rolRepository.findById(request.getIdRol())
-                .orElseThrow(() -> new RuntimeException("Rol no encontrado"));
-
         if (usuarioRepository.findByCorreo(request.getCorreo()).isPresent()) {
-            throw new RuntimeException("Ya existe un usuario con ese correo");
+            throw new ConflictException("Ya existe un usuario con ese correo");
         }
+
+        Rol rol = rolRepository.findById(request.getIdRol())
+                .orElseThrow(() -> new ResourceNotFoundException("Rol no encontrado"));
 
         Usuario usuario = Usuario.builder()
                 .nombre(request.getNombre())
-                .correo(request.getCorreo().toLowerCase())
+                .correo(request.getCorreo())
                 .telefono(request.getTelefono())
                 .contrasena(passwordEncoder.encode(request.getContrasena()))
                 .rol(rol)
@@ -51,32 +55,29 @@ public class UsuarioServiceImpl implements UsuarioService {
     @Override
     public UsuarioResponse obtenerPorId(Long idUsuario) {
         Usuario usuario = usuarioRepository.findById(idUsuario)
-                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
         return UsuarioMapper.toResponse(usuario);
     }
 
     @Override
     public List<UsuarioResponse> listarUsuarios() {
-        return usuarioRepository.findAll().stream()
+        return usuarioRepository.findAll()
+                .stream()
                 .map(UsuarioMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public UsuarioResponse actualizarUsuario(Long idUsuario, UsuarioRequest request) {
         Usuario usuario = usuarioRepository.findById(idUsuario)
-                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
 
         Rol rol = rolRepository.findById(request.getIdRol())
-                .orElseThrow(() -> new RuntimeException("Rol no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Rol no encontrado"));
 
         usuario.setNombre(request.getNombre());
         usuario.setTelefono(request.getTelefono());
         usuario.setRol(rol);
-
-        if (request.getContrasena() != null && !request.getContrasena().isBlank()) {
-            usuario.setContrasena(passwordEncoder.encode(request.getContrasena()));
-        }
 
         return UsuarioMapper.toResponse(usuarioRepository.save(usuario));
     }
@@ -84,31 +85,41 @@ public class UsuarioServiceImpl implements UsuarioService {
     @Override
     public void cambiarEstado(Long idUsuario, Boolean activo) {
         Usuario usuario = usuarioRepository.findById(idUsuario)
-                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
         usuario.setActivo(activo);
         usuarioRepository.save(usuario);
     }
 
-    // CLIENTE: obtener y actualizar perfil
+    // ====================== CLIENTE ======================
     @Override
     public UsuarioResponse obtenerPerfil(String correo) {
         Usuario usuario = usuarioRepository.findByCorreo(correo)
-                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
         return UsuarioMapper.toResponse(usuario);
     }
 
     @Override
     public UsuarioResponse actualizarPerfil(String correo, UsuarioUpdateRequest request) {
         Usuario usuario = usuarioRepository.findByCorreo(correo)
-                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
 
         usuario.setNombre(request.getNombre());
         usuario.setTelefono(request.getTelefono());
 
-        if (request.getContrasenaNueva() != null && !request.getContrasenaNueva().isBlank()) {
-            usuario.setContrasena(passwordEncoder.encode(request.getContrasenaNueva()));
-        }
-
         return UsuarioMapper.toResponse(usuarioRepository.save(usuario));
     }
+
+    @Override
+    public void cambiarContrasena(String correo, String actual, String nueva) {
+        Usuario usuario = usuarioRepository.findByCorreo(correo)
+                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado"));
+
+        if (!passwordEncoder.matches(actual, usuario.getContrasena())) {
+            throw new UnauthorizedException("La contraseña actual es incorrecta");
+        }
+    
+        usuario.setContrasena(passwordEncoder.encode(nueva));
+        usuarioRepository.save(usuario);
+    }
 }
+
